welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:2: error: not found: value nbCote
nbCote = 0;
^Runner:5: error: not found: value nbCote
	while (nbCote != 4) {
               ^Runner:10: error: not found: value nbCote
	nbCote = nbCote + 1;	
        ^